# AgentIR-SDK

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
agentir_langgraph_annotation.egg-info/: PKG-INFO  SOURCES.txt
agentir_sdk/: decorators.py  graph_proxy.py  interface.md  rid.py
agentir_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/agentir-langgraph-annotation/: client_logger.py  graph_proxy.py  interface.md  rid.py
src/agentir_langgraph/: contract.py
src/agentir_langgraph_annotation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
