[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentir-langgraph"
version = "0.1.0"
description = "AgentIR LangGraph integration: decorators, contract tooling, and client logging helpers."
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentir_langgraph*"]